Blender Assert: Hitting with Resample Curve Node #89993

Closed
opened 2021-07-20 17:43:44 +02:00 by Himanshi Kalra · 6 comments
Member

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: GeForce MX150/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.49

Blender Version
Broken: version: 3.0.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: rBUnknown
Worked: (newest version of Blender that worked as expected)

Short description of error
Debug build of blender hits an Assert and blender stops while using Resample Curve node.

Exact steps for others to reproduce the error

curve_resample_assert_failure.crash.txt

It happens for "closed" Curves from my observation.

  • Star, Quadrilateral, Bezier Quadrilateral and Curve Circle

Build Type: Debug Lite

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: GeForce MX150/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.49 **Blender Version** Broken: version: 3.0.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: `rBUnknown` Worked: (newest version of Blender that worked as expected) **Short description of error** Debug build of blender hits an Assert and blender stops while using Resample Curve node. **Exact steps for others to reproduce the error** * Open the attached file. * Decrease the count of `Resample Curve` node to `1`. [curve_resample_assert_failure.blend](https://archive.blender.org/developer/F10230101/curve_resample_assert_failure.blend) [curve_resample_assert_failure.crash.txt](https://archive.blender.org/developer/F10230102/curve_resample_assert_failure.crash.txt) It happens for "closed" Curves from my observation. - Star, Quadrilateral, Bezier Quadrilateral and Curve Circle Build Type: Debug Lite
Author
Member

Added subscriber: @Calra

Added subscriber: @Calra
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey self-assigned this 2021-07-20 20:52:44 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks! Fix incoming

Thanks! Fix incoming

This issue was referenced by aeee7f390d

This issue was referenced by aeee7f390d935ca913dfa686a1ded7c3d2d57681
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89993
No description provided.