Fix T89993: Failed assert drawing single point cyclic splines

The same check used for the curve to mesh node.